--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/leny62/capstone.git"
+    "url": "git+https://github.com/leny62/capstone.git"
   },
   "author": "leny62",
   "license": "ISC",
