--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node -- index.js",
     "start:dev": "nodemon --exec babel-node index.js",
-    "test": "jest --watch"
+    "test": "set PORT=5000 && jest --coverage --setTimeout=30000 --detectOpenHandles --verbose"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,8 @@
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
-    "nodemon": "^2.0.6"
+    "jest": "^26.6.1",
+    "nodemon": "^2.0.6",
+    "supertest": "^5.0.0"
   }
 }
