--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "config": "^3.3.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.12.0",
@@ -34,6 +36,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "mocha": "^8.2.0",
     "mongoose": "^5.10.10"
   },
   "devDependencies": {
