--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
     "@babel/plugin-transform-regenerator": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "@babel/register": "^7.12.1",
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "config": "^3.3.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.12.0",
@@ -40,7 +39,6 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mocha": "^8.2.0",
     "mongoose": "^5.10.10"
   },
   "devDependencies": {
