--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "babel-node index.js",
     "start:dev": "nodemon --exec babel-node index.js",
-    "test": "set PORT=5000 && jest --coverage --setTimeout=30000 --detectOpenHandles --verbose"
+    "test": "set PORT=6000 && set ENV=test && jest --coverage --setTimeout=30000 --detectOpenHandles --verbose"
+  },
+  "jest":{
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -42,7 +45,7 @@
     "mongoose": "^5.10.10"
   },
   "devDependencies": {
-    "jest": "^26.6.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "supertest": "^5.0.0"
   }
